duster/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: duster-client
  namespace: default
spec:
  selector:
    app: duster-client
  ports:
    - protocol: TCP
      port: 8785
      targetPort: 8785
  type: ClusterIP
